<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.luis.adminapp.MainActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="11dp"
        android:id="@+id/etUserName"
        android:layout_below="@+id/tvUserName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/etUserName"
        android:id="@+id/etPassword" />

    <Button
        android:text="@string/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="50dp"
        android:id="@+id/btnLogin"
        android:layout_alignEnd="@+id/etPassword"
        android:layout_alignStart="@+id/etPassword" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPassword"
        android:layout_above="@+id/etPassword"
        android:layout_alignStart="@+id/etPassword"
        android:layout_marginBottom="11dp" />

    <TextView
        android:text="@string/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:id="@+id/tvUserName"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/etUserName" />
</RelativeLayout>
