<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:layout_weight="1">

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewNameItem"
                android:layout_weight="1"/>

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLoginItem"
                android:layout_weight="1"/>

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewRegisDateItem"
                android:layout_weight="1"/>

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLeastLoginItem"
                android:layout_weight="1"/>

        </LinearLayout>

        <Button
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEdit"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:layout_weight="1"/>

        <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDelete"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

        <Button
            android:text="@string/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCall"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

    </LinearLayout>

</LinearLayout>